<resources>
    <string name="app_name">IsThisAHangout</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="test_text">Interactive problems are still a new topic which confuses many participants. Recently I failed to solve some of the interactive problems during contests, so I decided to practice</string>
    <string name="top_manga">Top Manga</string>
    <string name="aw_snap_an_error_occurred">Aw snap, an error occurred!!!</string>
    <string name="retry">Retry</string>
    <string name="moves">Moves</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="music">Music</string>
    <string name="chat">Chat</string>
    <string name="videos">Videos</string>
    <string name="posts">Posts</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="search_anime_by_genres">Search anime by genres</string>
    <string name="search_anime_by_season">Search anime by season</string>
    <string name="pokemons">Pokemons</string>
    <string name="reminders">Reminders</string>
    <string name="anime_quotes">Anime Quotes</string>
    <string name="anime_schedule">Anime Schedule</string>
    <string name="manga_corner">Manga Corner</string>
    <string name="search_anime_by_name">Search Anime By Name</string>
    <string name="favourites">Favourites</string>
    <string name="anime_pics">Anime pics</string>
    <string name="otaku_news">Otaku News</string>
    <string name="stock_market">Stock Market</string>
    <string name="video_title">Video Title....</string>
    <string name="add_a_description">Add a description....</string>
    <string name="upload">Upload</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="poster_image">Poster Image</string>
    <string name="synopsis">Synopsis</string>
    <string name="genres">Genres</string>
    <string name="read_more">Read more</string>
    <string name="airing_anime">Airing anime</string>
    <string name="video_games">Video games</string>
    <string name="upcoming_anime">Upcoming anime</string>
    <string name="about">About</string>
    <string name="due_date">Due Date....</string>
    <string name="search_manga_by_genre">Search manga by genre</string>
    <string name="search_anime">Search Anime</string>
    <string name="movies">Movies</string>
    <string name="comfort_characters">Comfort Characters</string>
    <string name="trailer">Trailer</string>
    <string name="post_image">Post Image</string>
    <string name="create_new_post">Create new post</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="add_image_to_comment">Add image to comment</string>
    <string name="comment_here">Comment here...</string>
    <string name="send_comment">Send comment</string>
    <string name="comment_attached_image">Comment attached Image</string>
    <string name="comments">Comments</string>
    <string name="replying_to">Replying To:</string>
    <string name="organisations">Organisations</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password....</string>
    <string name="send_message">Send message</string>
    <string name="openai">OpenAI</string>
    <string name="home_logo">home logo</string>
    <string name="search_button">search button</string>
    <string name="profile_button">profile button</string>
    <string name="discover">Discover</string>
    <string name="your_library">Your library</string>
    <string name="play">play</string>
    <string name="add">add</string>
    <string name="more">More</string>
    <string name="followers">%1$s FOLLOWERS</string>
    <string name="nbAlbum"> %1$s ALBUMS</string>
    <string name="back_button">back_button</string>
    <string name="previous">Previous</string>
    <string name="replay10">replay10</string>
    <string name="forward10">forward10</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_one">Repeat one</string>
    <string name="shuffle">Shuffle</string>
    <string name="skip_previous">Skip to previous</string>
    <string name="pause">Pause</string>
    <string name="skip_next">Skip to next</string>
    <string name="player_timestamp_format" translatable="false">%1$s:%2$s</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="media_duration_divider">/</string>
    <string name="full_screen">full Screen</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="divider">Divider</string>
</resources>