<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment2"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/animeByGenreFragment"
        android:icon="@drawable/search"
        android:title="@string/search_anime" />

    <item
        android:id="@+id/remindersFragment"
        android:icon="@drawable/reminders"
        android:title="@string/reminders" />
    <item
        android:id="@+id/animeQuoteFragment"
        android:icon="@drawable/quote"
        android:title="@string/anime_quotes" />
    <item
        android:id="@+id/animeScheduleFragment"
        android:icon="@drawable/calender"
        android:title="@string/anime_schedule" />
    <item
        android:id="@+id/mangaFragment"
        android:icon="@drawable/manga_corner"
        android:title="@string/manga_corner" />
    <item
        android:id="@+id/animeByNameFragment"
        android:icon="@drawable/search"
        android:title="@string/search_anime_by_name" />
    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/favourites"
        android:title="@string/favourites" />
    <item
        android:id="@+id/animePicsFragment"
        android:icon="@drawable/image"
        android:title="@string/anime_pics" />
    <item
        android:id="@+id/animeNewsFragment"
        android:icon="@drawable/news"
        android:title="@string/otaku_news" />

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/movie"
        android:title="@string/movies"/>

    <item
        android:id="@+id/stockMarketFragment"
        android:icon="@drawable/stock"
        android:title="@string/stock_market"/>
</menu>