<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdetails"
    tools:context=".ui.createContent.AddReminderFragment">

    <ProgressBar
        android:id="@+id/reminder_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:max="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/mypink"
        android:textColorHint="@color/mypink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background=" #26000000"
            android:hint="@string/reminder_title"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/mypink"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_desc_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_title_edit_text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/mypink"
        android:textColorHint="@color/mypink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background=" #26000000"
            android:hint="@string/add_a_description"
            android:inputType="textEmailAddress"
            android:lines="8"
            android:maxLines="20"
            android:minLines="6"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/mypink"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add_reminder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_desc_edit_text"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_reminder" />
</RelativeLayout>