<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chats_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdetails"
    tools:context=".ui.ChatsFragment">

    <ProgressBar
        android:id="@+id/messages_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/message_edit_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/messages_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messages_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textColor="@color/mypink"
            android:visibility="gone"
            tools:text="@string/aw_snap_an_error_occurred"
            tools:visibility="visible" />

        <Button
            android:id="@+id/messages_retry_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/retry"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/send_button"
        android:background="@drawable/rounded_edittext"
        android:padding="20dp"
        android:textColor="@color/myblack" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/send_message"
        android:src="@drawable/send"
        app:fabCustomSize="50dp" />

</RelativeLayout>